made all external styles and scripts local

--- a/app/index.html
+++ b/app/index.html
@@ -65,6 +65,8 @@
     </main>
 
     <!-- build:js scripts/main.min.js -->
+    <script src="scripts/plugins/jquery-2.1.1.min.js"></script>
+    <script src="scripts/plugins/skrollr.min.js"></script>
     <script src="scripts/plugins/headroom.min.js"></script>
     <script src="scripts/plugins/materialize.js"></script>
     <script src="scripts/plugins/rainbow.min.js"></script>
