changes to php templates for single post

--- a/app/index.html
+++ b/app/index.html
@@ -70,7 +70,7 @@
     <script src="scripts/plugins/headroom.min.js"></script>
     <script src="scripts/plugins/materialize.js"></script>
     <script src="scripts/plugins/rainbow.min.js"></script>
-    <script src="scripts/plugins/customizer.js"></script>
+    <!-- <script src="scripts/plugins/customizer.js"></script> -->
     <script src="scripts/plugins/skip-link-focus-fix.js"></script>
     <script src="scripts/main.js"></script>
     
