syntax highlighting via prism

--- a/app/index.html
+++ b/app/index.html
@@ -72,6 +72,7 @@
     <!-- <script src="scripts/plugins/customizer.js"></script> -->
     <script src="scripts/plugins/skip-link-focus-fix.js"></script>
     <script src="scripts/plugins/jquery.animsition.min.js"></script>
+    <script src="scripts/plugins/prism.js"></script>
     <script src="scripts/main.js"></script>
     
     
