--- a/app/starter.html
+++ b/app/starter.html
@@ -119,7 +119,7 @@
           <div class="row">
             <div class="col s12 m9 l8 offset-m2 offset-l2">
               <div class="fixed-action-btn" style="bottom: 64px; right: 24px;">
-                <a class="tooltipped btn-floating btn-large grey darken-3" data-position="left" data-delay="50" data-tooltip="Share this Article">
+                <a class="tooltipped btn-floating btn-large grey darken-3" data-position="left" data-delay="50" data-tooltip="Share this Post">
                   <i class="large mdi-social-share"></i>
                 </a>
                 <ul>
